fixed pullquote twitter icon cropping issue

--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -104,7 +104,7 @@
   &::after
     content: ""
     height: 2rem
-    width: rem(40)
+    width: rem(41)
     background: url(/img/svg/tweetlink.svg)
     background-size: cover
     background-position: right
